<resources>
    <string name="app_name">TODO_14</string>
    <string name="donut">Donut</string>
    <string name="icecream_sandwitch">Icecream sandwitch</string>
    <string name="froyo">Froyo</string>
    <string name="order">Order</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="status">Status</string>
    <string name="shopping">Shopping</string>
    <string name="query">Query</string>
    <string-array name="item_list">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>